camel-project/target/classes/META-INF/jkube/openshift/pix-api-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: git@github.com:yvesmatos13/first-api-pix.git
    app.openshift.io/vcs-uri: git@github.com:yvesmatos13/first-api-pix.git
    jkube.io/git-commit: f6101e90bd6e78143db59068dc4c90028a43c035
    jkube.io/git-branch: main
  labels:
    app: pix-api
    provider: jkube
    version: 1.0-SNAPSHOT
    group: io.example
  name: pix-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: pix-api
    provider: jkube
    group: io.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: main
        jkube.io/git-url: git@github.com:yvesmatos13/first-api-pix.git
        app.openshift.io/vcs-uri: git@github.com:yvesmatos13/first-api-pix.git
        jkube.io/git-commit: f6101e90bd6e78143db59068dc4c90028a43c035
        jkube.io/git-branch: main
      labels:
        app: pix-api
        provider: jkube
        version: 1.0-SNAPSHOT
        group: io.example
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: pix-api:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: pix-api:latest
    type: ImageChange
