camel-project/target/classes/META-INF/jkube/openshift/pix-api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    prometheus.io/path: /metrics
    jkube.io/git-branch: main
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
    jkube.io/git-url: git@github.com:yvesmatos13/first-api-pix.git
    app.openshift.io/vcs-uri: git@github.com:yvesmatos13/first-api-pix.git
    jkube.io/git-commit: f6101e90bd6e78143db59068dc4c90028a43c035
  labels:
    expose: "true"
    app: pix-api
    provider: jkube
    version: 1.0-SNAPSHOT
    group: io.example
  name: pix-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pix-api
    provider: jkube
    group: io.example
